# olden_era_build_project

./: ARCH019_PACKAGE_README.txt  BE-010_IMPLEMENTATION_REPORT.md  BE-011_IMPLEMENTATION_REPORT.md  INSTALL.md  PROTOCOL_UPDATE_README.md  README.md  README.txt  README_BE-011_TEST_HOTFIX.md  README_BE-012_PATCH.md  ROADMAP_UPDATE_README.md  UI-007-VALIDATION-HOTFIX-V2.md  UI-007-VALIDATION-HOTFIX-V3.md  UI-007-VALIDATION-HOTFIX.md  apply_be_011.py  apply_be_011_test_hotfix.py  apply_be_012.py  apply_be_013.py  apply_be_014.py  apply_be_015.py  apply_be_016.py  apply_ui007.py  apply_ui007_validation_hotfix.py  apply_ui007_validation_hotfix_v2.py  apply_ui007_validation_hotfix_v3.py  apply_ui008.py  apply_ui009.py  apply_ui009_comparison_scaling_hotfix.py  apply_ui009_control_affordance_hotfix.py  apply_ui009_initial_workspace_visibility_hotfix.py  apply_ui009_initial_workspace_visibility_hotfix_v2.py  apply_ui009_ownership_test_hotfix.py  apply_ui009_resume_hotfix.py  apply_ui010.py  apply_ui010_build_planner_width_hotfix.py  apply_ui010_compact_layout_hotfix.py  apply_ui010_validation_hotfix.py  apply_ui011.py  apply_ui011_resume_hotfix.py  apply_ui012.py  apply_ui012a_hotfix.py  (+3 more)
olden_db/: core_zip_file_list.txt  olden_era_file_list.txt  pyproject.toml
olden_db/notes/: lang_file_list.txt
olden_db/olden_db/: comparison.py  constants.py  csv_export.py  database.py  decision_summary.py  graph.py  income_timeline.py  localization.py  models.py  objective_planning.py  objective_query_models.py  parser.py  (+13 more)
olden_db/olden_db.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+6860 files in other folders)
