[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olden-db"
version = "0.1.0"
description = "Parser and build-order planner for Heroes of Might and Magic: Olden Era."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["olden_db*"]
